# wondrous-tails-simulator

./: .gitignore  Cargo.toml  README.md  index.html
src/: body.rs  lib.rs  main.rs  stats.rs
src/components/: mod.rs  rowcol.rs  stats.rs  sticker_slot.rs
src/stats/: board.rs  counter.rs  mod.rs  shuffle_results.rs  tails_sim.rs
src/stats/simulator/: computed.rs  computing.rs  memoizing.rs  mod.rs  precomputed.rs
static/: index.css  index.html
