[package]
name = "wondrous_tails_simulator"
version = "0.1.0"
edition = "2021"
authors = ["JJ Brown"]
description = "A WASM-based simulator for Wondrous Tails"
license = "MIT"
default-run = "webapp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-logger = "0.2.0"
log = "0.4.6"

[[bin]]
name = "webapp"

[[bin]]
name = "measure_9_sticker_boards"
required-features = ["measure_9_sticker_boards"]

[features]
measure_9_sticker_boards = []